--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npx webpack --config webpack.config.js"
+    "build": "npx webpack --config webpack.config.js",
+    "postbuild": "node addComment.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "moment": "^2.29.4",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@babel/core": "^7.23.3"
   }
 }
